added font-awesome icons that werent done in issue one #2

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>Bankjoy</title>
   <link href="css/default.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,200,300,400,600" rel="stylesheet">
+  <script src="https://use.fontawesome.com/7d8f728947.js"></script>
 </head>
 <body>
   <div id="contact">
-    <span><a id="tel" href="tel:6504298711">(650) 429-8711</a></span>
-    <span><a id="email" href="mailto:contact@bankjoy.com">Email Us</a></span>
+    <span><a id="tel" href="tel:6504298711"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(650) 429-8711</a></span>
+    <span><a id="email" href="mailto:contact@bankjoy.com"><i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>Email Us</a></span>
   </div>
   <div id="container">
     <div>
