Mobile phone images have been inserted, styled and placed #3

--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
       <p><button name="button">Schedule a demo</button></p>
     </div>
   </div>
+  <div>
+      <div>
+        <img id="left" class="phone" src="css/imgs/left.png">
+      </div>
+      <div>
+        <img  id="middle" class="phone" src="css/imgs/middle.png">
+      </div>
+      <div>
+        <img id="right" class="phone" src="css/imgs/right.png">
+      </div>
+  </div>
 </body>
 </html>
