site background with transparency implemented and styled

--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
   <script src="https://use.fontawesome.com/7d8f728947.js"></script>
 </head>
 <body>
-  <div id="contact">
-    <span><a id="tel" href="tel:6504298711"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(650) 429-8711</a></span>
-    <span><a id="email" href="mailto:contact@bankjoy.com"><i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>Email Us</a></span>
-  </div>
-  <div id="container">
+  <div id="tinting">
+    <div id="contact">
+      <span><a id="tel" href="tel:6504298711"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(650) 429-8711</a></span>
+      <span><a id="email" href="mailto:contact@bankjoy.com"><i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>Email Us</a></span>
+    </div>
+    <div id="container">
+      <div>
+        <img id="logo" src="css/imgs/logo-light.png" alt="BankJoy Logo">
+      </div>
+      <div id="message">
+        <h1 id="tagline">Mobile Banking for Credit Unions</h1>
+        <p id="schedule">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
+      </div>
+      <div id="buttondiv">
+        <p><button name="button">Schedule a demo</button></p>
+      </div>
+    </div>
     <div>
-      <img id="logo" src="css/imgs/logo-light.png" alt="BankJoy Logo">
-    </div>
-    <div id="message">
-      <h1 id="tagline">Mobile Banking for Credit Unions</h1>
-      <p id="schedule">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
-    </div>
-    <div id="buttondiv">
-      <p><button name="button">Schedule a demo</button></p>
-    </div>
-  </div>
-  <div>
       <div>
         <img id="left" class="phone" src="css/imgs/left.png">
       </div>
@@ -35,6 +36,7 @@
       <div>
         <img id="right" class="phone" src="css/imgs/right.png">
       </div>
+    </div>
   </div>
 </body>
 </html>
