Added animations to button, fixed background color and movement, changed iphone imaget to match existing site #9

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img id="logo" src="css/imgs/logo-light.png" alt="BankJoy Logo">
       </div>
       <div id="message">
-        <h1 id="tagline">Mobile Banking for Credit Unions</h1>
+        <h1>Mobile Banking for Credit Unions</h1>
         <p id="schedule">SCHEDULE A DEMO TODAY AND DELIVER MODERN MOBILE BANKING TO YOUR MEMBERS BY DECEMBER 17TH</p>
       </div>
       <div id="buttondiv">
